--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "serverless-http": "^4.0.0"
   },
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
